[gd_scene load_steps=15 format=3 uid="uid://dlsxkapbmu8a5"]

[ext_resource type="Script" path="res://MainMenu/MainMenu.gd" id="1_geu8k"]
[ext_resource type="Texture2D" uid="uid://dv0lei01qofet" path="res://HUD/Art/HealthbarEmpty.png" id="2_6as2u"]
[ext_resource type="Texture2D" uid="uid://dvytqvkcigcqi" path="res://Player/Characters/Art/CookieWalk-1.png" id="3_dksqh"]
[ext_resource type="Texture2D" uid="uid://b3878rfg4xitc" path="res://MainMenu/Art/NextArrow.png" id="3_mor01"]
[ext_resource type="Texture2D" uid="uid://col2ljvlcd2qm" path="res://Player/Art/Faces/DefaultFace.png" id="4_5lfsp"]
[ext_resource type="Texture2D" uid="uid://bt10bgswjsytr" path="res://Player/Characters/Art/CookieWalk-0.png" id="4_8g5ns"]
[ext_resource type="Texture2D" uid="uid://ctf6b1ctguwgr" path="res://MainMenu/Art/NextArrowHover.png" id="4_qmgj8"]
[ext_resource type="LabelSettings" uid="uid://b02ry3r2kq5vl" path="res://HUD/Name.tres" id="5_wyfeg"]
[ext_resource type="PackedScene" uid="uid://cjh381wkxqgma" path="res://MainMenu/Achievements/AchievementDisplay.tscn" id="8_uwlwx"]
[ext_resource type="PackedScene" uid="uid://cvcjedeo54fs0" path="res://World/World.tscn" id="9_byynd"]

[sub_resource type="LabelSettings" id="LabelSettings_7v2bj"]
font_size = 64

[sub_resource type="SpriteFrames" id="SpriteFrames_rcntu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dksqh")
}, {
"duration": 1.0,
"texture": ExtResource("4_8g5ns")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_0d6vo"]
offsets = PackedFloat32Array(0.55, 0.73)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gud3p"]
gradient = SubResource("Gradient_0d6vo")
width = 36
height = 18
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[node name="Menu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_geu8k")

[node name="World" parent="." instance=ExtResource("9_byynd")]
position = Vector2(202.5, 360)
scale = Vector2(0.3, 0.3)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -202.5
offset_right = 202.5
offset_bottom = 96.0
grow_horizontal = 2
text = "TastyTerm"
label_settings = SubResource("LabelSettings_7v2bj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
offset_left = 75.0
offset_top = 372.0
offset_right = 331.0
offset_bottom = 372.0
texture = ExtResource("2_6as2u")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -132.0
offset_right = 128.5
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterSelect" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 80)
layout_mode = 2

[node name="RightButton" type="TextureButton" parent="VBoxContainer/CharacterSelect"]
layout_mode = 0
offset_left = 208.0
offset_right = 248.0
offset_bottom = 40.0
texture_normal = ExtResource("3_mor01")
texture_pressed = ExtResource("4_qmgj8")
texture_hover = ExtResource("4_qmgj8")
flip_h = true

[node name="LeftButton" type="TextureButton" parent="VBoxContainer/CharacterSelect"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 16.0
offset_right = 48.0
offset_bottom = 32.0
texture_normal = ExtResource("3_mor01")
texture_pressed = ExtResource("4_qmgj8")
texture_hover = ExtResource("4_qmgj8")

[node name="Description" type="NinePatchRect" parent="VBoxContainer/CharacterSelect"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -26.0
offset_right = 128.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_6as2u")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Label" type="Label" parent="VBoxContainer/CharacterSelect/Description"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 253.0
offset_bottom = 26.0
label_settings = ExtResource("5_wyfeg")
autowrap_mode = 3

[node name="Display" type="AnimatedSprite2D" parent="VBoxContainer/CharacterSelect"]
texture_filter = 1
position = Vector2(124.5, 16)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_rcntu")
frame_progress = 0.366121

[node name="Shadow" type="Sprite2D" parent="VBoxContainer/CharacterSelect/Display"]
modulate = Color(1, 1, 1, 0.607843)
z_index = -1
position = Vector2(0, 14)
texture = SubResource("GradientTexture2D_gud3p")

[node name="Face" type="TextureRect" parent="VBoxContainer/CharacterSelect/Display"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_5lfsp")
stretch_mode = 3

[node name="LevelSelect" type="NinePatchRect" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
texture = ExtResource("2_6as2u")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Label" type="Label" parent="VBoxContainer/LevelSelect"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
offset_left = 3.0
offset_top = 3.0
offset_right = 253.0
offset_bottom = 63.0
text = "Rural:
Nice open area, broken up by roads. It looks like nobody in sight.
"
label_settings = ExtResource("5_wyfeg")
autowrap_mode = 2

[node name="RightButtonM" type="TextureButton" parent="VBoxContainer/LevelSelect"]
layout_mode = 0
offset_left = 272.0
offset_right = 312.0
offset_bottom = 40.0
texture_normal = ExtResource("3_mor01")
texture_pressed = ExtResource("4_qmgj8")
texture_hover = ExtResource("4_qmgj8")
flip_h = true

[node name="LeftButtonM" type="TextureButton" parent="VBoxContainer/LevelSelect"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = -48.0
offset_right = -16.0
offset_bottom = 32.0
texture_normal = ExtResource("3_mor01")
texture_pressed = ExtResource("4_qmgj8")
texture_hover = ExtResource("4_qmgj8")

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="TempStart" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
text = "Start
"

[node name="TempAchievments" type="Button" parent="."]
layout_mode = 0
offset_left = 290.0
offset_top = 683.0
offset_right = 398.0
offset_bottom = 714.0
text = "Achievments"

[node name="TempSettings" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 682.0
offset_right = 80.0
offset_bottom = 713.0
text = "Settings"

[node name="AchievmentDisplay" parent="." instance=ExtResource("8_uwlwx")]
visible = false
layout_mode = 1

[connection signal="mouse_entered" from="VBoxContainer/CharacterSelect" to="." method="_on_character_select_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/CharacterSelect" to="." method="_on_character_select_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/CharacterSelect/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CharacterSelect/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelSelect/RightButtonM" to="." method="_on_right_button_m_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelSelect/LeftButtonM" to="." method="_on_left_button_m_pressed"]
[connection signal="pressed" from="VBoxContainer/TempStart" to="." method="_on_temp_start_pressed"]
[connection signal="pressed" from="TempAchievments" to="." method="_on_temp_achievments_pressed"]
